[package]
name = "signature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.1.0" }
serde = "1.0.164"
cosmwasm-schema = "1.2.6"
k256 = "0.13.1"
hex = "0.4.3"
rand_core = "0.6.4"
schemars = "0.8.12"
cw20 = { git = "https://github.com/CosmWasm/cosmwasm-plus", branch = "main", package = "cw20" }
cw721 = { git = "https://github.com/CosmWasm/cw-nfts", branch = "main", package = "cw721" }

[dev-dependencies]
cw-multi-test   = "0.16.2"