[package]
name = "cw721-base"
version = "1.0.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Basic implementation cw721 NFTs"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-ownable = "0.5.1"
cw2 = { path = "../../packages/cw2", version = "1.0.1" }
cw721 = { path = "../../packages/cw721", version = "1.0.1" }
cw721-base-016  = { version = "0.16.0", package = "cw721-base" }
cw-storage-plus = "1.0.1"
cosmwasm-std = { version = "1.1.0" }
schemars = "0.8.12"
serde = "1.0.164"
thiserror = "1.0.40"
cw-utils = "1.0.1"
cosmwasm-schema = "1.1.0"

[dev-dependencies]
cosmwasm-schema = "1.2.6"
cw-multi-test   = "0.16.2"
