[package]
name = "exchange-token"
version = "0.9.2"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
[features]
library = []

[dependencies]
cosmwasm-schema = "1.2.6"
cw-storage-plus = "1.0.1"
cosmwasm-std = { version = "1.1.0" }
cw20 = { version = "1.0.1", path = "../../packages/cw20" }
cw721 = { version = "1.0.1", path = "../../packages/cw721" }
ethereum-types = "0.14.1"
hex = "0.4.3"
key = "0.0.0"
schemars = "0.8.12"
secp256k1 = "0.27.0"
serde = "1.0.164"
sha3 = "0.10.8"
thiserror = "1.0.40"

[dev-dependencies]
cw-multi-test   = "0.16.2"
cw20-base = {version = "1.0.1", path = "../../contracts/cw20-base"}
cw721-base = { version = "1.0.1", path = "../../contracts/cw721-base" }
